<resources>
    <string name="app_name" translatable="false">EasyCom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>

    <string name="menu_home" translatable="false">Account Setting</string>
    <string name="menu_gallery" translatable="false">All User </string>
    <string name="menu_slideshow" translatable="false">Chat</string>
    <string name="menu_tools" translatable="false">Logout</string>

    <string name="menu_friends" translatable="false">Friendes </string>

    <string name="menu_request" translatable="false">Request </string>

    <string name="setting" translatable="false">Setting</string>
    <string name="btn_user">User</string>
    <string name="btn_employee">Employee</string>
    <string name="action_home">Home</string>
    <string name="action_chat">Chat</string>
    <string name="action_settings">Settings</string>
    <string name="action_about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="drawer_open">Open</string>
    <string name="about_uv">about university</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="settings">Settings</string>
    <string name="select_university">Select your university</string>
    <string name="select_faculty">Select your faculty</string>
    <string name="btn_done">Done</string>
    <string name="loading">Loading</string>
    <string name="title_emp_details">Employee Details</string>
    <string name="btn_start_chat">Start Chat</string>
    <string name="title_chat_activity">Chat Activity</string>
    <string name="hint_type_here">Type here ...</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
